# SafeTrip

./: .gitignore  README.md  pyproject.toml
client/: package.json
client/src/app/: globals.css  layout.tsx
client/src/components/: cctv-tile.tsx  incident-card.tsx  mobile-shell.tsx
configs/: event_rules.json  runtime.json
configs/cameras/: crowd_compression_concourse.json  demo_camera.json  man_falls_platform.json  passengers_queuing_gate.json
docs/: post-incident-investigation.md  tanah-abang-flow-prompts.md
scripts/: run_demo_library.py  run_demo_pipeline.py
server/: migrate_db.py  requirements.txt  seed.py
server/app/: database.py
server/app/db/: __init__.py  orm.py
server/app/routes/: investigations.py
server/app/schemas/: investigations.py  reports.py
server/app/services/: __init__.py  camera_service.py  incident_service.py  investigation_ai.py  (+4 more)
server/tests/: test_investigation_ai.py  test_investigation_services.py  test_post_incident_investigation.py
src/transitshield_vision/: __init__.py  annotations.py  config.py  detector.py  evaluation.py  event_state_machine.py  evidence.py  geometry.py  incident_export.py  pipeline.py  pose.py  risk_indicators.py  runner.py  schemas.py  track_state.py  tracker.py  video_io.py  visualization.py
tests/: test_annotations_leakage.py  test_backbone.py  test_config.py  test_event_detectors.py  test_event_state_machine.py  test_geometry.py  test_pipeline.py  test_pose.py  test_repository_config.py  test_risk.py  test_runner.py  test_schema_evaluation.py  test_track_zone.py  test_visualization.py
(+18 files in other folders)
